# stereo_playground

./: README.md
stereo_synthPOC/devel/: .catkin  _setup_util.py  env.sh  (+6 more)
stereo_synthPOC/src/stereo_synthPOC/: CMakeLists.txt  nohup.out  readme.md  script1.sh  script2.sh  script3.sh  script4.sh  script5.sh
stereo_synthPOC/src/stereo_synthPOC/left_cam_view/src/mur_stereo_basler/: CMakeLists.txt  package.xml
stereo_synthPOC/src/stereo_synthPOC/left_cam_view/src/mur_stereo_basler/includes/: GeniPylon.hpp  GeniWrap.hpp
stereo_synthPOC/src/stereo_synthPOC/left_cam_view/src/mur_stereo_basler/launch/: mur_stereo_acq_left.launch
stereo_synthPOC/src/stereo_synthPOC/left_cam_view/src/mur_stereo_basler/src/: main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_common/: .gitignore  CMakeLists.txt  README.md
stereo_synthPOC/src/stereo_synthPOC/mur_common/msg/: actuation_msg.msg  cone_msg.msg  diagnostic_msg.msg  path_msg.msg  timing_msg.msg
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_left/.catkin_tools/profiles/default/: devel_collisions.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_left/src/mur_stereo_basler/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_left/src/mur_stereo_basler/includes/: GeniPylon.hpp  GeniWrap.hpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_left/src/mur_stereo_basler/launch/: mur_stereo_acq_left.launch
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_left/src/mur_stereo_basler/src/: backup_main_08_07_2021.cpp  main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_right/src/mur_stereo_basler/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_right/src/mur_stereo_basler/includes/: GeniPylon.hpp  GeniWrap.hpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_right/src/mur_stereo_basler/launch/: mur_stereo_acq_right.launch
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_acq_right/src/mur_stereo_basler/src/: main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_baslar_ros_package/.catkin_tools/profiles/default/: devel_collisions.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_baslar_ros_package/src/mur_stereo_basler/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_baslar_ros_package/src/mur_stereo_basler/includes/: GeniWrap.hpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_baslar_ros_package/src/mur_stereo_basler/src/: backup_main.cpp  main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_basler/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_basler/cmake/: FindIDSPeak.cmake
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_basler/src/: main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_image/src/: main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_pipeline/: CMakeLists.txt  Makefile  cmake_install.cmake  readme.md
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_pipeline/src/Classical/: ClassicalStereo.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_pipeline/src/Detectors/: Detectors.cpp  explanation.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_pipeline/src/StereoCommon/: StereoBench.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_ros/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_ros/src/: mur_stereo_ros_node.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_matchup/src/mur_stereo_basler/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_matchup/src/mur_stereo_basler/includes/: GeniPylon.hpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_matchup/src/mur_stereo_basler/launch/: mur_stereo_rosbag_matchup.launch
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_matchup/src/mur_stereo_basler/src/: GeniWrap.cpp  disparity_filtering.cpp  main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_replay_left/src/mur_stereo_basler/: CMakeLists.txt  package.xml
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_replay_left/src/mur_stereo_basler/src/: main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_replay_left/src/mur_stereo_video/src/: main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_replay_right/.catkin_tools/profiles/default/: devel_collisions.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_replay_right/src/mur_stereo_basler/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_replay_right/src/mur_stereo_basler/src/: calibration.cpp  image_converter.cpp  main.cpp
stereo_synthPOC/src/stereo_synthPOC/mur_stereo_rosbag_replay_right/src/mur_stereo_image/src/: main.cpp
stereo_synthPOC/src/stereo_synthPOC/right_cam_view/.catkin_tools/profiles/default/: devel_collisions.txt
stereo_synthPOC/src/stereo_synthPOC/right_cam_view/src/mur_stereo_basler/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/right_cam_view/src/mur_stereo_basler/includes/: GeniPylon.hpp  GeniWrap.hpp
stereo_synthPOC/src/stereo_synthPOC/right_cam_view/src/mur_stereo_basler/launch/: mur_stereo_acq_right.launch
stereo_synthPOC/src/stereo_synthPOC/stereo_launch/: CMakeLists.txt
stereo_synthPOC/src/stereo_synthPOC/stereo_launch/launch/: stereo_image_acquisition.launch
stereo_synthPOC/src/stereo_synthPOC/test_rosbag/: 2021-07-07-08-02-57.bag
(+1020 files in other folders)
